logs/ditio.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ditio'...
Compiling './lib/python3.5/site-packages/ditio/__init__.py'...
***   File "./lib/python3.5/site-packages/ditio/__init__.py", line 25
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ditio/cmd.py'...
***   File "./lib/python3.5/site-packages/ditio/cmd.py", line 62
    print 'Command [%s] not recognised ' % p
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ditio/site'...
Listing './lib/python3.5/site-packages/ditio/site/src'...
Listing './lib/python3.5/site-packages/ditio/site/src/components'...
Listing './lib/python3.5/site-packages/ditio/site/src/css'...
Listing './lib/python3.5/site-packages/ditio/site/src/css/highlight.js'...
Listing './lib/python3.5/site-packages/ditio/site/src/css/highlight.js/8.4.0'...
Listing './lib/python3.5/site-packages/ditio/site/src/css/highlight.js/8.4.0/styles'...
Compiling './lib/python3.5/site-packages/ditio/site.py'...
***   File "./lib/python3.5/site-packages/ditio/site.py", line 19
    print "Indexing ... "
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ditio-0.0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
